crates/tools/system/tests/snapshots/discovery_sessions_test__extrospection_tool_failure_evidence_linked_modes.snap
---
source: crates/tools/system/tests/discovery_sessions_test.rs
expression: "redact_runtime_fields(serde_json::json!({\n    \"llm_linked_prompt_rejected\": snapshot_safe_tool_output(llm_output),\n    \"tool_linked_emitted_message\": snapshot_safe_tool_output(tool_output)\n}))"
---
{
  "llm_linked_prompt_rejected": {
    "appliedCaps": {
      "maxPageSize": 50,
      "pageSize": 5,
      "topK": 10
    },
    "hotspotGroups": [
      {
        "avgDurationMs": 220,
        "avgTotalTokens": 7,
        "count": 1,
        "failed": 1,
        "failureRate": 1,
        "groupDimensions": [
          "agent_id"
        ],
        "groupKey": "00000000-0000-0000-0000-000000000702",
        "groupValues": [
          "00000000-0000-0000-0000-000000000702"
        ]
      }
    ],
    "resource": "llm_calls",
    "rows": [
      {
        "a2a_activity_anchor": "[prov_activity_anchor]",
        "a2a_activity_outcome": "Failed",
        "a2a_agent_id": "00000000-0000-0000-0000-000000000702",
        "a2a_client": "openai",
        "a2a_context_id": "ctx-9-13",
        "a2a_duration_ms": 220,
        "a2a_event_order": 900,
        "a2a_failure_class": "failed_graph_incomplete",
        "a2a_failure_evidence": "metadata",
        "a2a_function_name": "CallerPrompt",
        "a2a_message_id": "tool-msg-caller",
        "a2a_model": "gpt-4o-mini",
        "a2a_prompt_message_chars": 0,
        "a2a_prompt_name": "CallerPrompt",
        "a2a_prompt_serialized_utf8_bytes": 25,
        "a2a_usage_completion_tokens": 0,
        "a2a_usage_prompt_tokens": 7,
        "a2a_usage_total_tokens": 7,
        "activity_id": "llm_call:ctx-9-13:tool-msg-caller:00000000-0000-0000-0000-000000000702:1",
        "activity_kind": "llm_call",
        "activity_outcome": "Failed",
        "activity_ref": "[prov_activity_ref]",
        "activity_status": "Completed",
        "agent_id": "00000000-0000-0000-0000-000000000702",
        "baml_prompt": "CallerPrompt",
        "completion_tokens": 0,
        "context_id": "ctx-9-13",
        "duration_ms": 220,
        "failure_class": "baml_validation_error",
        "failure_evidence": "BAML validation failed: missing required field",
        "llm_call": null,
        "llm_call_ref": "[prov_payload_ref]",
        "llm_result": null,
        "llm_result_ref": "[prov_payload_ref]",
        "message_id": "tool-msg-caller",
        "model": "gpt-4o-mini",
        "prompt_tokens": 7,
        "prov_endTime": 300,
        "prov_time": 300,
        "prov_type": "a2a:LlmCall",
        "provider": "openai",
        "timestamp_ms": "[timestamp_ms]",
        "total_tokens": 7
      }
    ],
    "summary": {
      "cachedInputTokensTotal": 0,
      "completionTokensTotal": 0,
      "count": 1,
      "durationMsTotal": 220,
      "failedCount": 1,
      "latencyHotspots": {
        "p95": 220,
        "p99": 220
      },
      "promptTokensTotal": 7,
      "tokenHotspots": {
        "p95": 7,
        "p99": 7
      },
      "totalTokens": 7
    },
    "truncated": false
  },
  "tool_linked_emitted_message": {
    "appliedCaps": {
      "maxPageSize": 50,
      "pageSize": 5,
      "topK": 10
    },
    "hotspotGroups": [
      {
        "avgDurationMs": 330,
        "avgTotalTokens": 0,
        "count": 1,
        "failed": 1,
        "failureRate": 1,
        "groupDimensions": [
          "agent_id"
        ],
        "groupKey": "00000000-0000-0000-0000-000000000702",
        "groupValues": [
          "00000000-0000-0000-0000-000000000702"
        ]
      }
    ],
    "resource": "tool_calls",
    "rows": [
      {
        "a2a_activity_anchor": "[prov_activity_anchor]",
        "a2a_activity_outcome": "Failed",
        "a2a_agent_id": "00000000-0000-0000-0000-000000000702",
        "a2a_context_id": "ctx-9-13",
        "a2a_duration_ms": 330,
        "a2a_event_order": 40,
        "a2a_failure_class": "failed_graph_incomplete",
        "a2a_failure_evidence": "metadata",
        "a2a_function_name": "DelegatePrompt",
        "a2a_message_id": "tool-msg-linked",
        "a2a_tool_name": "support/delegate",
        "activity_id": "tool_call:ctx-9-13:tool-msg-linked:00000000-0000-0000-0000-000000000702:0",
        "activity_kind": "tool_call",
        "activity_outcome": "Failed",
        "activity_ref": "[prov_activity_ref]",
        "activity_status": "Completed",
        "agent_id": "00000000-0000-0000-0000-000000000702",
        "baml_prompt": "DelegatePrompt",
        "context_id": "ctx-9-13",
        "duration_ms": 330,
        "failure_class": "failed_graph_incomplete",
        "failure_evidence": "metadata",
        "message_id": "tool-msg-linked",
        "prov_endTime": 800,
        "prov_time": 800,
        "prov_type": "a2a:ToolCall",
        "timestamp_ms": "[timestamp_ms]",
        "tool_call": {
          "args": {
            "objective": "linked emitted message evidence"
          },
          "name": "support/delegate",
          "phase": "unknown"
        },
        "tool_call_ref": "[prov_payload_ref]",
        "tool_name": "support/delegate",
        "tool_result": null,
        "tool_result_ref": "[prov_payload_ref]"
      }
    ],
    "summary": {
      "completionTokensTotal": 0,
      "count": 1,
      "durationMsTotal": 330,
      "failedCount": 1,
      "latencyHotspots": {
        "p95": 330,
        "p99": 330
      },
      "promptTokensTotal": 0,
      "tokenHotspots": {
        "p95": 0,
        "p99": 0
      },
      "totalTokens": 0
    },
    "truncated": false
  }
}
