crates/tools/system/tests/snapshots/discovery_sessions_test__extrospection_tool_filter_sort_drilldown.snap
---
source: crates/tools/system/tests/discovery_sessions_test.rs
expression: "redact_runtime_fields(serde_json::json!({\n    \"filtered\": snapshot_safe_tool_output(filtered_output), \"drilldown\":\n    snapshot_safe_tool_output(drilldown_output)\n}))"
---
{
  "drilldown": {
    "appliedCaps": {
      "max_page_size": 50,
      "page_size": 1,
      "top_k": 10
    },
    "hotspotGroups": [
      {
        "avgDurationMs": 500,
        "avgTotalTokens": 0,
        "count": 1,
        "failed": 1,
        "failureRate": 1,
        "groupDimensions": [
          "agent_id"
        ],
        "groupKey": "00000000-0000-0000-0000-000000000700",
        "groupValues": [
          "00000000-0000-0000-0000-000000000700"
        ]
      }
    ],
    "resource": "tool_calls",
    "rows": [
      {
        "activity_id": "tool_call:ctx-9-12:tool-msg-caller:00000000-0000-0000-0000-000000000700:0",
        "activity_kind": "tool_call",
        "activity_outcome": "Failed",
        "activity_ref": "[prov_activity_ref]",
        "activity_status": "Completed",
        "agent_display": "unknown/unknown",
        "agent_id": "00000000-0000-0000-0000-000000000700",
        "agent_package": "unknown",
        "agent_version": "unknown",
        "baml_prompt": "CalcPrompt",
        "context_id": "ctx-9-12",
        "duration_ms": 500,
        "failure_class": "timeout",
        "failure_evidence": "metadata",
        "message_id": "tool-msg-caller",
        "task_id": null,
        "timestamp_ms": "[timestamp_ms]",
        "tool_call": {
          "args": {
            "expression": "1+1"
          },
          "name": "support/calculate",
          "phase": null
        },
        "tool_call_ref": "[prov_payload_ref]",
        "tool_name": "support/calculate",
        "tool_result": {
          "error": "timeout"
        },
        "tool_result_ref": "[prov_payload_ref]"
      }
    ],
    "summary": {
      "completionTokensTotal": 0,
      "count": 1,
      "durationMsTotal": 500,
      "failedCount": 1,
      "latencyHotspots": {
        "p95": 500,
        "p99": 500
      },
      "promptTokensTotal": 0,
      "tokenHotspots": {
        "p95": 0,
        "p99": 0
      },
      "totalTokens": 0
    },
    "truncated": false
  },
  "filtered": {
    "appliedCaps": {
      "max_page_size": 50,
      "page_size": 5,
      "top_k": 10
    },
    "hotspotGroups": [
      {
        "avgDurationMs": 500,
        "avgTotalTokens": 0,
        "count": 1,
        "failed": 1,
        "failureRate": 1,
        "groupDimensions": [
          "agent_id",
          "tool_name"
        ],
        "groupKey": "00000000-0000-0000-0000-000000000700|support/calculate",
        "groupValues": [
          "00000000-0000-0000-0000-000000000700",
          "support/calculate"
        ]
      },
      {
        "avgDurationMs": 330,
        "avgTotalTokens": 0,
        "count": 1,
        "failed": 1,
        "failureRate": 1,
        "groupDimensions": [
          "agent_id",
          "tool_name"
        ],
        "groupKey": "00000000-0000-0000-0000-000000000700|support/delegate",
        "groupValues": [
          "00000000-0000-0000-0000-000000000700",
          "support/delegate"
        ]
      }
    ],
    "resource": "tool_calls",
    "rows": [
      {
        "activity_id": "tool_call:ctx-9-12:tool-msg-caller:00000000-0000-0000-0000-000000000700:0",
        "activity_kind": "tool_call",
        "activity_outcome": "Failed",
        "activity_ref": "[prov_activity_ref]",
        "activity_status": "Completed",
        "agent_display": "unknown/unknown",
        "agent_id": "00000000-0000-0000-0000-000000000700",
        "agent_package": "unknown",
        "agent_version": "unknown",
        "baml_prompt": "CalcPrompt",
        "context_id": "ctx-9-12",
        "duration_ms": 500,
        "failure_class": "timeout",
        "failure_evidence": "metadata",
        "message_id": "tool-msg-caller",
        "task_id": null,
        "timestamp_ms": "[timestamp_ms]",
        "tool_call": {
          "args": {
            "expression": "1+1"
          },
          "name": "support/calculate",
          "phase": null
        },
        "tool_call_ref": "[prov_payload_ref]",
        "tool_name": "support/calculate",
        "tool_result": {
          "error": "timeout"
        },
        "tool_result_ref": "[prov_payload_ref]"
      },
      {
        "activity_id": "tool_call:ctx-9-12:tool-msg-linked:00000000-0000-0000-0000-000000000700:0",
        "activity_kind": "tool_call",
        "activity_outcome": "Failed",
        "activity_ref": "[prov_activity_ref]",
        "activity_status": "Completed",
        "agent_display": "unknown/unknown",
        "agent_id": "00000000-0000-0000-0000-000000000700",
        "agent_package": "unknown",
        "agent_version": "unknown",
        "baml_prompt": "DelegatePrompt",
        "context_id": "ctx-9-12",
        "duration_ms": 330,
        "failure_class": "failed_graph_incomplete",
        "failure_evidence": "metadata",
        "message_id": "tool-msg-linked",
        "task_id": null,
        "timestamp_ms": "[timestamp_ms]",
        "tool_call": {
          "args": {
            "objective": "linked emitted message evidence"
          },
          "name": "support/delegate",
          "phase": null
        },
        "tool_call_ref": "[prov_payload_ref]",
        "tool_name": "support/delegate",
        "tool_result": null,
        "tool_result_ref": "[prov_payload_ref]"
      }
    ],
    "summary": {
      "completionTokensTotal": 0,
      "count": 2,
      "durationMsTotal": 830,
      "failedCount": 2,
      "latencyHotspots": {
        "p95": 500,
        "p99": 500
      },
      "promptTokensTotal": 0,
      "tokenHotspots": {
        "p95": 0,
        "p99": 0
      },
      "totalTokens": 0
    },
    "truncated": false
  }
}
