crates/tools/system/tests/snapshots/discovery_sessions_test__extrospection_tool_output.snap
---
source: crates/tools/system/tests/discovery_sessions_test.rs
expression: snapshot_safe_tool_output(output.clone())
---
{
  "appliedCaps": {
    "max_page_size": 50,
    "page_size": 5,
    "top_k": 10
  },
  "hotspotGroups": [],
  "resource": "tool_calls",
  "rows": [],
  "summary": {
    "completionTokensTotal": 0,
    "count": 0,
    "durationMsTotal": 0,
    "failedCount": 0,
    "latencyHotspots": {
      "p95": 0,
      "p99": 0
    },
    "promptTokensTotal": 0,
    "tokenHotspots": {
      "p95": 0,
      "p99": 0
    },
    "totalTokens": 0
  },
  "truncated": false
}
