crates/tools/system/tests/snapshots/discovery_sessions_test__extrospection_tool_request_scope.snap
---
source: crates/tools/system/tests/discovery_sessions_test.rs
expression: redact_runtime_fields(payload)
---
{
  "appliedCaps": {
    "maxPageSize": 50,
    "pageSize": 5,
    "topK": 10
  },
  "hotspotGroups": [],
  "resource": "tool_calls",
  "rows": [],
  "summary": {
    "completionTokensTotal": 0,
    "count": 0,
    "durationMsTotal": 0,
    "failedCount": 0,
    "latencyHotspots": {
      "p95": 0,
      "p99": 0
    },
    "promptTokensTotal": 0,
    "tokenHotspots": {
      "p95": 0,
      "p99": 0
    },
    "totalTokens": 0
  },
  "truncated": false
}
