crates/tools/system/tests/snapshots/discovery_sessions_test__introspection_tool_output.snap
---
source: crates/tools/system/tests/discovery_sessions_test.rs
expression: snapshot_safe_tool_output(output.clone())
---
{
  "appliedCaps": {
    "max_page_size": 50,
    "page_size": 20,
    "top_k": 10
  },
  "hotspotGroups": [
    {
      "avgDurationMs": 220,
      "avgTotalTokens": 7,
      "count": 1,
      "failed": 1,
      "failureRate": 1,
      "groupDimensions": [
        "agent_id"
      ],
      "groupKey": "00000000-0000-0000-0000-000000000123",
      "groupValues": [
        "00000000-0000-0000-0000-000000000123"
      ]
    }
  ],
  "resource": "llm_calls",
  "rows": [
    {
      "activity_id": "llm_call:ctx-9-9:tool-msg-caller:00000000-0000-0000-0000-000000000123:0",
      "activity_kind": "llm_call",
      "activity_outcome": "Failed",
      "activity_ref": "[prov_activity_ref]",
      "activity_status": "Completed",
      "agent_display": "unknown/unknown",
      "agent_id": "00000000-0000-0000-0000-000000000123",
      "agent_package": "unknown",
      "agent_version": "unknown",
      "baml_prompt": "CallerPrompt",
      "cached_input_tokens": null,
      "completion_tokens": 0,
      "context_id": "ctx-9-9",
      "duration_ms": 220,
      "failure_class": "baml_validation_error",
      "failure_evidence": "BAML validation failed: missing required field",
      "llm_call": null,
      "llm_call_ref": "[prov_payload_ref]",
      "llm_result": null,
      "llm_result_ref": "[prov_payload_ref]",
      "message_id": "tool-msg-caller",
      "model": "gpt-4o-mini",
      "prompt_tokens": 7,
      "provider": "openai",
      "task_id": null,
      "timestamp_ms": "[timestamp_ms]",
      "total_tokens": 7
    }
  ],
  "summary": {
    "cachedInputTokensTotal": 0,
    "completionTokensTotal": 0,
    "count": 1,
    "durationMsTotal": 220,
    "failedCount": 1,
    "latencyHotspots": {
      "p95": 220,
      "p99": 220
    },
    "promptTokensTotal": 7,
    "tokenHotspots": {
      "p95": 7,
      "p99": 7
    },
    "totalTokens": 7
  },
  "truncated": false
}
